Bug #25468 Nf during LCP can lead to subsequent Nf
Submitted: 8 Jan 2007 18:36 Modified: 25 Jan 2007 6:01
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:
Assigned to: Jonas Oreland Target Version:

[8 Jan 2007 18:36] Jonas Oreland
Description:
NF during LCP when only some nodes have received LCP_FRAG_REP from dying node
will lead to NF then node is restarted.

Those nodes that did/didnt receive last message (depedning on what master did)
  will fail.

How to repeat:
error inserts

Suggested fix:
[9 Jan 2007 21:16] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17808

ChangeSet@1.2083, 2007-01-09 21:15:19+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#25468 
    handle partially transfered LCP_FRAG_REP after node failure
    (mysql-5.1-wl2325-5.0)
[10 Jan 2007 20:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/17881

ChangeSet@1.2362, 2007-01-10 20:50:19+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#25468
    handle partially transfered LCP_FRAG_REP after node failure
    recommit to 51-work
[11 Jan 2007 21:24] Jonas Oreland
pushed to 5.1-ndb
wont be fixed in 5.0 and 4.1
[24 Jan 2007 3:04] Tomas Ulin
pushed to 5.1.15
[25 Jan 2007 6:01] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.15 changelog.